# Multimodal-Customer-Support-AI-Agent

./: .gitignore  README.md
Backend/: agent.py  main.py  pyproject.toml  req.txt  test_client.py  tools.py
Backend/db/: create_db.py  crm_mock.db  database.py
Frontend/: package-lock.json  package.json
Frontend/src/app/: app.css  app.html  app.ts
